--- a/sdk/FriendKit/Assembly-CSharp.csproj
+++ b/sdk/FriendKit/Assembly-CSharp.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\FriendKit\FB.cs" />
+     <Compile Include="Assets\FriendKit\Guild.cs" />
+     <Compile Include="Assets\FriendKit\ObjectExt.cs" />
      <Compile Include="Assets\FriendKit\User.cs" />
      <None Include="Assets\Firebase\m2repository\com\google\firebase\firebase-app-unity\maven-metadata.xml" />
      <None Include="Assets\Firebase\Plugins\link.xml" />
