--- a/sdk/FriendKit/Assembly-CSharp.csproj
+++ b/sdk/FriendKit/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\FriendKit\Auth.cs" />
      <Compile Include="Assets\FriendKit\FB.cs" />
      <Compile Include="Assets\FriendKit\Guild.cs" />
      <Compile Include="Assets\FriendKit\ObjectExt.cs" />
