--- a/functions/package.json
+++ b/functions/package.json
@@ -13,12 +13,16 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "algoliasearch": "^3.33.0",
+    "dotenv": "^8.0.0",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.3.0",
     "luxon": "^1.15.0",
     "moment": "^2.24.0"
   },
   "devDependencies": {
+    "@types/algoliasearch": "^3.30.12",
+    "@types/dotenv": "^6.1.1",
     "@types/luxon": "^1.13.0",
     "typescript": "^3.2.2"
   },
