--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/lodash": "^4.14.130",
     "algoliasearch": "^3.33.0",
     "dotenv": "^8.0.0",
     "firebase-admin": "~7.0.0",
